[package]
name = "imgui-winit-support"
version = "0.12.0"
edition = "2021"
description = "winit support code for the imgui crate"
homepage = "https://github.com/imgui-rs/imgui-winit-support"
repository = "https://github.com/imgui-rs/imgui-winit-support"
documentation = "https://docs.rs/imgui-winit-support"
license = "MIT OR Apache-2.0"
categories = ["gui"]

[dependencies]
imgui = "0.12.0"
winit = { version = "0.30", default-features = false }
